Se actualizan objetos DB

--- a/python/Tesis_ModeloOCRA.ipynb
+++ b/python/Tesis_ModeloOCRA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 2,
       "metadata": {
         "id": "z4tbKmWW_-xO"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 4,
       "metadata": {
         "id": "sgfbq09AE0Gt"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,14 +89,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "maquila013.mp4\n"
+            "maquila014.mp4\n"
           ]
         }
       ],
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 8,
       "metadata": {
         "id": "4W3aozRXbO8v"
       },
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -190,7 +190,7 @@
               "'def analyze_videos_in_folder(video_folder, output_json_path):\\n    all_analysis_results = []\\n    \\n    for video_file in os.listdir(video_folder):\\n        if video_file.endswith((\\'.mp4\\', \\'.avi\\', \\'.mov\\')):\\n            video_path = os.path.join(video_folder, video_file)\\n            video_name = os.path.splitext(video_file)[0]\\n            \\n            keypoints_list = detect_keypoints(video_path)\\n            cap = cv2.VideoCapture(video_path)\\n            fps = int(cap.get(cv2.CAP_PROP_FPS))\\n            cap.release()\\n\\n            analysis_results = analyze_keypoints(keypoints_list, video_name, fps)\\n            all_analysis_results.extend(analysis_results)\\n            draw_keypoints_and_angles(video_path, analysis_results, output_folder, output_video_folder, json_folder)\\n    \\n    combined_json_path = os.path.join(json_folder, \\'Resultado_analisis_combinados.json\\')\\n    with open(output_json_path, \\'w\\') as json_file:\\n        json.dump(all_analysis_results, json_file, indent=4)\\n\\n    print(f\"Resultados del análisis exportados a: {output_json_path}\")\\n\\n# Ejemplo de uso:\\n#video_folder = \\'C:\\\\Tesis\\\\TestErgo\\\\muestra\\'\\nvideo_folder = video_dir #\\'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS\\'\\noutput_json_path = \\'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json\\'\\n\\nanalyze_videos_in_folder(video_folder, output_json_path)'"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -437,27 +437,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Tesis\\TesisOCRA\\TesisCheckListOCRA\\python\\venv\\Lib\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
+            "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\maquila013\n",
-            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\maquila013_20240724_111644.mp4\n",
-            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644.json\n"
+            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\maquila014\n",
+            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\maquila014_20240725_102220.mp4\n",
+            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220.json\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\maquila013',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\maquila013_20240724_111644.mp4',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\maquila013_20240724_111644.json')"
+              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\maquila014',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\maquila014_20240725_102220.mp4',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\maquila014_20240725_102220.json')"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -473,15 +481,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\maquila013_20240724_111644.json\n",
-            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\maquila013_20240724_111644.mp4\n",
+            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\maquila014_20240725_102220.json\n",
+            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\maquila014_20240725_102220.mp4\n",
             "El JSON se ha actualizado con TNTR y TNC.\n"
           ]
         }
@@ -583,14 +591,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644_actualizado_actualizado.json.\n"
+            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220FR.json.\n"
           ]
         }
       ],
@@ -650,7 +658,7 @@
         "data['Factor de Recuperacion'] = fr\n",
         "\n",
         "# Guardar el JSON actualizado\n",
-        "updated_json_path = json_path.replace('.json', '_actualizado.json')\n",
+        "updated_json_path = json_path.replace('.json', 'FR.json')\n",
         "with open(updated_json_path, 'w') as file:\n",
         "    json.dump(data_list, file, indent=4)\n",
         "\n",
@@ -666,15 +674,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644_actualizado_actualizado_actualizado_posturas_movimientos_actualizado_frecuencia_actualizado.json.\n"
+            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220FR__ff.json.\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -717,7 +735,7 @@
         "data['Factor de Frecuencia'] = ff\n",
         "\n",
         "# Guardar el JSON actualizado\n",
-        "updated_json_path = json_path.replace('.json', '_frecuencia_actualizado.json')\n",
+        "updated_json_path = json_path.replace('.json', '__ff.json')\n",
         "with open(updated_json_path, 'w') as file:\n",
         "    json.dump(data_list, file, indent=4)\n",
         "\n",
@@ -727,14 +745,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644_actualizado_actualizado_actualizado_posturas_movimientos_actualizado_frecuencia_actualizado_fuerza_actualizado.json.\n"
+            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220FR__ff_ffz.json.\n"
           ]
         }
       ],
@@ -812,7 +830,7 @@
         "data['Factor de Fuerza'] = ffz\n",
         "\n",
         "# Guardar el JSON actualizado\n",
-        "updated_json_path = json_path.replace('.json', '_fuerza_actualizado.json')\n",
+        "updated_json_path = json_path.replace('.json', '_ffz.json')\n",
         "with open(updated_json_path, 'w') as file:\n",
         "    json.dump(data_list, file, indent=4)\n",
         "\n",
@@ -821,14 +839,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644_actualizado_actualizado_actualizado_posturas_movimientos_actualizado.json.\n"
+            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220FR__ff_ffz_fp.json.\n"
           ]
         }
       ],
@@ -877,7 +895,7 @@
         "data['Factor de Posturas y Movimientos'] = fp\n",
         "\n",
         "# Guardar el JSON actualizado\n",
-        "updated_json_path = json_path.replace('.json', '_posturas_movimientos_actualizado.json')\n",
+        "updated_json_path = json_path.replace('.json', '_fp.json')\n",
         "with open(updated_json_path, 'w') as file:\n",
         "    json.dump(data_list, file, indent=4)\n",
         "\n",
@@ -893,14 +911,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila013_20240724_111644_actualizado_actualizado_actualizado_posturas_movimientos_actualizado_frecuencia_actualizado_fuerza_actualizado_duracion_actualizado.json.\n"
+            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\maquila014_20240725_102220FR__ff_ffz_fp_md.json.\n"
           ]
         }
       ],
@@ -980,7 +998,7 @@
         "data['Multiplicador de Duracion'] = md\n",
         "\n",
         "# Guardar el JSON actualizado\n",
-        "updated_json_path = json_path.replace('.json', '_duracion_actualizado.json')\n",
+        "updated_json_path = json_path.replace('.json', '_md.json')\n",
         "with open(updated_json_path, 'w') as file:\n",
         "    json.dump(data_list, file, indent=4)\n",
         "\n",
@@ -989,14 +1007,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "El archivo Excel se ha guardado en: C:\\Tesis\\TesisOCRA\\TesisCheckListOCRA\\static\\resultados\\AnalisisCheckListOCRA_None_20240724_225015.xlsx\n"
+          "ename": "UnboundLocalError",
+          "evalue": "cannot access local variable 'video_name' where it is not associated with a value",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[21], line 148\u001b[0m\n\u001b[0;32m    145\u001b[0m data \u001b[38;5;241m=\u001b[39m data_list[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    147\u001b[0m \u001b[38;5;66;03m# Calcular el Check List OCRA\u001b[39;00m\n\u001b[1;32m--> 148\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mcalcular_checklist_ocra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    150\u001b[0m \u001b[38;5;66;03m# Guardar el resultado en un archivo Excel\u001b[39;00m\n\u001b[0;32m    151\u001b[0m guardar_resultado_excel(result)\n",
+            "Cell \u001b[1;32mIn[21], line 54\u001b[0m, in \u001b[0;36mcalcular_checklist_ocra\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalcular_checklist_ocra\u001b[39m(data):\n\u001b[0;32m     51\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;124;03m    Calcula el Índice Check List OCRA (ICKL) basado en los factores y el multiplicador de duración (MD).\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m     video_name \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mget(\u001b[43mvideo_name\u001b[49m)\n\u001b[0;32m     55\u001b[0m     tntr \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTNTR\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m480\u001b[39m)  \u001b[38;5;66;03m# Tiempo Neto de Trabajo Repetitivo en minutos\u001b[39;00m\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;66;03m# Calcular el Multiplicador de Duración\u001b[39;00m\n",
+            "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'video_name' where it is not associated with a value"
           ]
         }
       ],
