Cambios de diagrama y pruebas de script jupyter

--- a/python/Tesis_ModeloOCRA.ipynb
+++ b/python/Tesis_ModeloOCRA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 356,
+      "execution_count": 41,
       "metadata": {
         "id": "z4tbKmWW_-xO"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 357,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 358,
+      "execution_count": 43,
       "metadata": {
         "id": "sgfbq09AE0Gt"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 359,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 360,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,14 +89,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 361,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Sachets-empaque snack.mp4\n"
+            "Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p).mp4\n"
           ]
         }
       ],
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 362,
+      "execution_count": 47,
       "metadata": {
         "id": "4W3aozRXbO8v"
       },
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 363,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 364,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -190,7 +190,7 @@
               "'def analyze_videos_in_folder(video_folder, output_json_path):\\n    all_analysis_results = []\\n    \\n    for video_file in os.listdir(video_folder):\\n        if video_file.endswith((\\'.mp4\\', \\'.avi\\', \\'.mov\\')):\\n            video_path = os.path.join(video_folder, video_file)\\n            video_name = os.path.splitext(video_file)[0]\\n            \\n            keypoints_list = detect_keypoints(video_path)\\n            cap = cv2.VideoCapture(video_path)\\n            fps = int(cap.get(cv2.CAP_PROP_FPS))\\n            cap.release()\\n\\n            analysis_results = analyze_keypoints(keypoints_list, video_name, fps)\\n            all_analysis_results.extend(analysis_results)\\n            draw_keypoints_and_angles(video_path, analysis_results, output_folder, output_video_folder, json_folder)\\n    \\n    combined_json_path = os.path.join(json_folder, \\'Resultado_analisis_combinados.json\\')\\n    with open(output_json_path, \\'w\\') as json_file:\\n        json.dump(all_analysis_results, json_file, indent=4)\\n\\n    print(f\"Resultados del análisis exportados a: {output_json_path}\")\\n\\n# Ejemplo de uso:\\n#video_folder = \\'C:\\\\Tesis\\\\TestErgo\\\\muestra\\'\\nvideo_folder = video_dir #\\'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS\\'\\noutput_json_path = \\'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json\\'\\n\\nanalyze_videos_in_folder(video_folder, output_json_path)'"
             ]
           },
-          "execution_count": 364,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 365,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 366,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -437,27 +437,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 367,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\Sachets-empaque snack\n",
-            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\Sachets-empaque snack_20240803_210432.mp4\n",
-            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json\n"
+            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)\n",
+            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4\n",
+            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\Sachets-empaque snack',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\Sachets-empaque snack_20240803_210432.mp4',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\Sachets-empaque snack_20240803_210432.json')"
+              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json')"
             ]
           },
-          "execution_count": 367,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -473,15 +473,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 368,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\Sachets-empaque snack_20240803_210432.json\n",
-            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\Sachets-empaque snack_20240803_210432.mp4\n",
+            "Archivo JSON más reciente: C:/Tesis/TestErgo/archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json\n",
+            "Video más reciente: C:/Tesis/TestErgo/videoMarcado\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.mp4\n",
             "El JSON se ha actualizado con TNTR y TNC.\n"
           ]
         }
@@ -556,7 +556,7 @@
         "    'activities': [{'duration': 480, 'is_repetitive': True}],  # Ejemplo de datos, reemplazar con tu análisis real\n",
         "    'breaks': [{'duration': 60}],  # Ejemplo de datos\n",
         "    'rests': [{'duration': 60}],  # Ejemplo de datos\n",
-        "    'cycles_count': 9000  # Ejemplo de datos\n",
+        "    'cycles_count': 9000  # este campo quedará fijo con 9000 ciclos\n",
         "}\n",
         "\n",
         "# Calcular TNTR y TNC\n",
@@ -621,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 369,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -629,7 +629,7 @@
           "output_type": "stream",
           "text": [
             "Formato de tiempo: 'Xh Ym', 'Xh' o 'Ym' (ejemplo: '8h 30m', '1h', '45m')\n",
-            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Factor de Recuperación y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -754,14 +754,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 370,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Factor de Frecuencia y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -829,7 +829,7 @@
         "ate = data.get('AccionesTecnicasEstáticas', None) \"\"\"\n",
         "\n",
         "# Definir valores predeterminados para ATD y ATE\n",
-        "valor_atd = 0.0  # Valor fijo de ejemplo para Acciones Técnicas Dinámicas\n",
+        "valor_atd = 0.0  # Valor fijo de ejemplo para Acciones Técnicas Dinámicas   \n",
         "valor_ate = 0.0  # Valor fijo de ejemplo para Acciones Técnicas Estáticas\n",
         "\n",
         "# Intentar extraer puntuaciones del JSON, sino usar valores predeterminados\n",
@@ -864,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 371,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -872,7 +872,7 @@
           "output_type": "stream",
           "text": [
             "No se encontraron acciones de fuerza en el archivo JSON. Usando valores predeterminados.\n",
-            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Factor de Fuerza y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -931,7 +931,7 @@
         "    :return: Lista de acciones con sus detalles\n",
         "    \"\"\"\n",
         "    acciones = [\n",
-        "        {'esfuerzo_cr10': 3, 'duracion': \"1/3 del tiempo\"},\n",
+        "        {'esfuerzo_cr10': 2, 'duracion': \"1/3 del tiempo\"},\n",
         "        #{'esfuerzo_cr10': 4, 'duracion': \"50% del tiempo\"},\n",
         "        #{'esfuerzo_cr10': 5, 'duracion': \"2 seg. cada 10 min.\"},\n",
         "        #{'esfuerzo_cr10': 6, 'duracion': \"1% del tiempo\"},\n",
@@ -988,14 +988,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 372,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Factor de Posturas y Movimientos y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -1081,14 +1081,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 373,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Factor de Riesgos Adicionales (FC) y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Factor de Riesgos Adicionales (FC) y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -1102,10 +1102,10 @@
         "    # Definir criterios para calcular el FC\n",
         "    # Ejemplo: Puedes tener varios campos que influyen en el FC\n",
         "    riesgo_adicional_1 = json_data.get('RiesgoAdicional1', 2)\n",
-        "    #riesgo_adicional_2 = json_data.get('RiesgoAdicional2', 1)\n",
+        "    riesgo_adicional_2 = json_data.get('RiesgoAdicional2', 1)\n",
         "    \n",
         "    # Ejemplo de fórmula para el FC\n",
-        "    fc = riesgo_adicional_1 * 0.2 #+ riesgo_adicional_2 * 0.2\n",
+        "    fc = riesgo_adicional_1 * 0.2 + riesgo_adicional_2 * 0.2\n",
         "    \n",
         "    return fc\n",
         "\n",
@@ -1155,14 +1155,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 374,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Sachets-empaque snack_20240803_210432.json.\n"
+            "El JSON se ha actualizado con el Multiplicador de Duración y guardado en C:\\Tesis\\TestErgo\\archivos_json\\Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092217.json.\n"
           ]
         }
       ],
@@ -1242,7 +1242,7 @@
         "data = data_list[0]\n",
         "\n",
         "# Extraer TNTR del JSON\n",
-        "tntr = data.get('TNTR', 480)  # Usar 480 minutos por defecto si no está presente\n",
+        "tntr = data.get('Tiempo Neto de Trabajo Repetitivo', 480)  # Usar 480 minutos por defecto si no está presente\n",
         "\n",
         "# Calcular el MD\n",
         "md = calcular_md(tntr)\n",
@@ -1272,14 +1272,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 375,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El Excel se ha creado y guardado en static\\resultados\\analisisOcra_Sachets-empaque snack_20240803_211101.xlsx.\n"
+            "El Excel se ha creado y guardado en static\\resultados\\analisisOcra_Y2meta.app-Diagnóstico Ergonómico biomecánico_ evaluación final-(480p)_20240805_092224.xlsx.\n"
           ]
         }
       ],
